# cloud-stt-compare

./: .env.example  .gitignore  README.md  pyproject.toml
aws/: simple_mic.py
gcp/: streaming_microphone.py
